@@ -1,7 +1,6 @@
 package com.soft1851.common.utils;
 
-import sun.misc.BASE64Encoder;
-
+import org.apache.commons.codec.binary.Base64;
 import javax.servlet.ServletOutputStream;
 import javax.servlet.http.HttpServletResponse;
 import java.io.*;
@@ -92,8 +91,9 @@ public class FileUtil {
         }
 
         // 对字节数组Base64编码并且返回
-        BASE64Encoder encoder = new BASE64Encoder();
-        return encoder.encode(fileData);
+//        BASE64Encoder encoder = new BASE64Encoder();
+//        return encoder.encode(fileData);
+        return Base64.encodeBase64String(fileData);
     }
 
 }
